# elephant-server

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-test  LICENSE  Makefile  NOTICE  README.md  elephant.def  elephant_server.ipynb  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  release-rc.yml  release.yml
app/: main.py  prestart-disable-rabbitmq.sh  prestart.sh
app/apis/: __init__.py  dataset.py  download.py  flow.py  params.py  seg.py  state.py  upload.py
apps/elephant_server/: pyproject.toml
apps/elephant_server/src/elephant_server/: __init__.py  _version.py  main.py
docker/: create_rabbitmq_user.sh  entrypoint.sh  install-rabbitmq.sh  nginx.conf  nginx.conf.template  rabbitmq-vhosts.sh  rabbitmq.sh  setup-rabbitmq.sh  supervisord.conf  test.sh  tls-gen.sh  uwsgi.ini
elephant-core/: setup.py
libs/elephant_core/: pyproject.toml
libs/elephant_core/src/elephant_core/: __init__.py  _version.py
notebook/: utils.py
script/: BF-C2DL-HSC_seg_GT.json  DIC-C2DH-HeLa_seg_GT.json  DIC-C2DH-HeLa_seg_GT_ST.json  Fluo-C2DL-MSC_seg_GT.json  Fluo-C2DL-MSC_seg_ST.json  Fluo-C2DL-MSC_sparse.json  Fluo-N2DL-HeLa_sparse.json  PhC-C2DH-U373_seg_ST.json  PhC-C2DL-PSC_seg_GT.json  benchmark_dataset.py  check_image_shapes.py  config.json  convert_to_2d_labels.py  convert_to_2d_labels.sh  dataset_generator.py  elephant-detection.py  eval.py  generate_config.py  generate_seg_labels.py  generate_seg_labels.sh  generate_seg_labels_3d.sh  profile_run_seg.sh  profile_train_flow.sh  profile_train_seg.sh  run_elephant.py  test_train_li13-t4_flow.sh  test_train_li13-t4_seg.sh  train.py  train.sh  train_check_overfitting.sh  train_check_overfitting_no-aug.sh  train_check_overfitting_t000-t100-t194.sh  train_check_overfitting_versatile002.sh  train_li13-t4_20220111.sh  train_trackathon.sh  train_trackathon_flow.sh  train_versatile3d.sh
workspace/: convert.sh
(+189 files in other folders)
